(feat) Altera o estilo da página principal, edita reset-css e adiciona o footer

--- a/index.html
+++ b/index.html
@@ -55,11 +55,18 @@
                     <input id="minutos_pausa" type="number" min="5" max="99" placeholder="5"></input>
                 </section>
                 <hr style="margin: 10% 0;">
+                <button id="btn_salvar" onclick="button_salvar()">Salvar</button>
             </section>
-            <button id="btn_salvar" onclick="button_salvar()">Salvar</button>
         </div>
-
     </main>
+    <footer>
+        <h4>REFERÊNCIAS</h4>
+        <ul>
+            <li><a href="https://github.com/devjunr/pomodorus/graphs/contributors">Contribuidores do Projeto</a></li>
+            <li><a href="https://pt.wikipedia.org/wiki/T%C3%A9cnica_pomodoro">Técnica pomodoro - Wikipedia</a></li>
+            <li></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
