Adicionado botões de modo, botões de som

--- a/index.html
+++ b/index.html
@@ -33,14 +33,25 @@
     </header>
     <main>
         <div class="container">
+            <section class="btn-acao" id="clock-action">
+                <button id="btn" onclick="">Pomodoro</i></button>
+                <button id="btn" onclick="">Pausa Longa</i></button>
+                <button id="btn_config" onclick="">Pausa Curta</button>
+            </section>
+
             <section class="timer">
                 <h2 id="clock-time">00:00</h2>
             </section>
+
             <section class="btn-acao" id="clock-action">
                 <button id="btn-start" onclick="">Start</button>
-
                 <button id="btn" onclick=""><i class="fa-solid fa-pause"></i></button>
                 <button id="btn_config" onclick="configuracoes()"><i class="fa-solid fa-gear"></i></button>
+            </section>
+
+            <section class="btn-acao" id="clock-action">
+                <button id="btn" onclick=""><i class="fa-solid fa-radio"></i></i></button>
+                <button id="btn_config"><i class="fa-solid fa-wind"></i></button>
             </section>
         </div>
 
