Add button dark/light mode

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <title>Pomodorus - Time</title>
 
+        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <link rel="stylesheet" href="src/styles/style.css" />
         <link rel="stylesheet" href="src/styles/reset-css.css" />
         <link
@@ -39,7 +40,11 @@
                 <a href="#">Pomodorus</a>
             </section>
 
-            <section>
+            <section class="container-menu">
+                <div class="button-style-mode">
+                    <span class="material-symbols-outlined sun">light_mode</span>
+                    <span class="material-symbols-outlined moon">dark_mode</span>
+                </div>
                 <a href="https://github.com/devJunr/pomodorus">
                     <i class="display-1 fa-brands fa-github"> </i>
                 </a>
