(feat) Add som ao tocar nos botões, add botão de ruido branco

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         <button type="button" id="btn_radio">
                             <i class="fa-solid fa-radio"></i>
                         </button>
-                        <button type="button" id="btn_wind">
-                            <i class="fa-solid fa-wind"></i>
+                        <button type="button" id="btn_pause_radio" disabled>
+                            <i class="fa-solid fa-volume-xmark"></i>
                         </button>
                     </div>
                 </section>
