Edita redirecionamento ao clicar na logo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body>
         <header>
             <section class="logo">
-                <a href="https://devjunr.github.io/pomodorus/">Pomodorus</a>
+                <a href="../">Pomodorus</a>
             </section>
 
             <section class="container-menu">
