--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body>
         <header>
             <section class="logo">
-                <a href="../">Pomodorus</a>
+                <a href="index.html">Pomodorus</a>
             </section>
 
             <section class="container-menu">
