Adiciona tempo padrão/inicial

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html lang="pt-br">
     <head>
@@ -22,7 +22,10 @@
 
         <title>Pomodorus - Time</title>
 
-        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="src/styles/style.css" />
         <link rel="stylesheet" href="src/styles/reset-css.css" />
         <link
@@ -42,8 +45,12 @@
 
             <section class="container-menu">
                 <div class="button-style-mode">
-                    <span class="material-symbols-outlined sun">light_mode</span>
-                    <span class="material-symbols-outlined moon">dark_mode</span>
+                    <span class="material-symbols-outlined sun"
+                        >light_mode</span
+                    >
+                    <span class="material-symbols-outlined moon"
+                        >dark_mode</span
+                    >
                 </div>
                 <a href="https://github.com/devJunr/pomodorus">
                     <i class="display-1 fa-brands fa-github"> </i>
@@ -58,21 +65,17 @@
                         <button type="button" id="btn_pomodoro">
                             Pomodoro
                         </button>
-                        <button type="button" id="btn_long_pause">
-                            Pausa Longa
-                        </button>
                         <button type="button" id="btn_short_pause">
                             Pausa Curta
+                        </button>
+                        <button type="button" id="btn_long_pause">
+                            Pausa Longa
                         </button>
                     </div>
                 </section>
 
                 <section>
                     <h2 id="clock-time">00:00</h2>
-                </section>
-
-                <section>
-                    <p>Insira o tempo de trabalho e pausa nas configurações</p>
                 </section>
 
                 <section>
@@ -93,7 +96,6 @@
                         </button>
                     </div>
                 </section>
-                
             </div>
 
             <div class="config_container">
